completed election app

--- a/electionAppDao/src/main/webapp/newuser.html
+++ b/electionAppDao/src/main/webapp/newuser.html
@@ -16,7 +16,7 @@ Email:       <input type="text" name="email"/> <br/><br/>
 Password:    <input type="password" name="password"/> <br/><br/>
 DOB:         <input type="date" name="dob"/> <br/><br/>
 Role:        <input type="radio" name="role" value="admin"/>Admin
-             <input type="radio" name="role" value="user"/>User
+             <input type="radio" name="role" value="voter"/>Voter
              
              
              <input type="submit" value="Register"/>
